Closed Bug 1508378 Opened 7 years ago Closed 6 years ago

[Wayland]Text cursor leaves remnants when moved

Categories

(Core :: Widget: Gtk, defect, P3)

65 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: jcdawes92, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:65.0) Gecko/20100101 Firefox/65.0 Steps to reproduce: Type into a text box, such as the one to log a bug here, then press the left cursor key a few times. Actual results: This will leave a trail of vertical remnants of the text cursor as it moves. Only seems to happen on left moves, not right Expected results: No remnants should be left behind
Component: Untriaged → Widget: Cocoa
Product: Firefox → Core
Blocks: wayland
Priority: -- → P3
Component: Widget: Cocoa → Widget: Gtk

I do see that too but only on 4K display. I can't reproduce on lower resolutions. I suspect it's a bug in mutter/gnome, there's nothing Firefox can fix here.

This can be also caused by gfx card/driver, can you attach content of about:support page?

Flags: needinfo?(jcdawes92)
Attached file about:support
Flags: needinfo?(jcdawes92)

Hi Martin,
I don't get this effect in anything else on Wayland, for example gedit which uses the same cursor.
Also I don't get the problem if I start Firefox on Xwayland, so it seems pretty specific.

(In reply to jcdawes92 from comment #4)

Hi Martin,
I don't get this effect in anything else on Wayland, for example gedit which
uses the same cursor.
Also I don't get the problem if I start Firefox on Xwayland, so it seems
pretty specific.

Yes, I can confirm that.

Status: UNCONFIRMED → NEW
Ever confirmed: true

Can you please try to enable webrender/GL backend? Set layers.acceleration.force-enabled to true at about:config. Thanks.

Flags: needinfo?(jcdawes92)

Also do you use screen scaling/ HiDPI displays? I can reproduce only when I have 200% screen scale set.

I think I have a patch for it.

Flags: needinfo?(jcdawes92)

We have rendering artifacts when sceen scale is set and damage size/position is odd number.
It's caused by round error so update the size/position accordingly.

Hi Martin,
yes, I am using a HIDPI display with 200% scaling.
Turning on webrender/GL backend makes a small difference. There are fewer remnants and they clean themselves up after a few seconds or when something else is updated.
For example, while entering this text, if I hold down left-arrow I get loads of remnants for a few seconds, then it suddenly clears up.

(In reply to jcdawes92 from comment #10)

Hi Martin,
yes, I am using a HIDPI display with 200% scaling.
Turning on webrender/GL backend makes a small difference. There are fewer
remnants and they clean themselves up after a few seconds or when something
else is updated.
For example, while entering this text, if I hold down left-arrow I get
loads of remnants for a few seconds, then it suddenly clears up.

The webrender/GL artifacts may be a different bug. This should be fixed in the SW rendered with this patch at least.

Pushed by apavel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/38b3fac27d90
Fix round error when damage rect size/position is odd number and scale factor is used, r=lsalzman

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Assignee: nobody → stransky
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: