Bug 1508378 - Fix round error when damage rect size/position is odd number and scale factor is used, r=lsalzman

We have rendering artifacts when sceen scale is set and damage size/position is odd number.
It's caused by round error so update the size/position accordingly.

Differential Revision: https://phabricator.services.mozilla.com/D26903